--- a/.env
+++ b/.env
@@ -4,3 +4,6 @@ COHERE_API_KEY = 'YOUR-KEY-HERE'
 DEEPSEEK_API_KEY = 'YOUR-KEY-HERE'
 GEMINI_API_KEY = 'YOUR-KEY-HERE'
 IBM_API_TOKEN = 'YOUR-KEY-HERE'
+HF_TOKEN = 'YOUR-KEY-HERE'
+NVIDIA_NIM_API_KEY = 'YOUR-KEY-HERE'
+GROQ_API_KEY = 'YOUR-KEY-HERE'
